Fixing tests replacing text/plain with application/png as not supported media type Moving vendor specific JSON check in a separate interface to @GenIgnore for the pattern usage
Signed-off-by: Paolo Patierno <ppatierno@live.com>