@@ -15,9 +15,7 @@ package io.vertx.openapi.contract;
 import io.vertx.codegen.annotations.VertxGen;
 import io.vertx.json.schema.JsonSchema;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.regex.Pattern;
 
 /**
  * This interface represents the most important attributes of an OpenAPI Operation.
@@ -36,17 +34,15 @@ public interface MediaType extends OpenAPIObject {
   String APPLICATION_OCTET_STREAM = "application/octet-stream";
   String TEXT_PLAN = "text/plain";
   String TEXT_PLAIN_UTF8 = TEXT_PLAN + "; charset=utf-8";
-  List<String> SUPPORTED_MEDIA_TYPES = Arrays.asList(APPLICATION_JSON, APPLICATION_JSON_UTF8, MULTIPART_FORM_DATA,
+  List<String> SUPPORTED_MEDIA_TYPES = List.of(APPLICATION_JSON, APPLICATION_JSON_UTF8, MULTIPART_FORM_DATA,
     APPLICATION_HAL_JSON, APPLICATION_OCTET_STREAM, TEXT_PLAN, TEXT_PLAIN_UTF8);
-
-  Pattern VENDOR_SPECIFIC_JSON = Pattern.compile("^[^/]+/vnd\\.[\\w.-]+\\+json$");
 
   static boolean isMediaTypeSupported(String type) {
     return SUPPORTED_MEDIA_TYPES.contains(type.toLowerCase()) || isVendorSpecificJson(type);
   }
 
   static boolean isVendorSpecificJson(String type) {
-    return VENDOR_SPECIFIC_JSON.matcher(type).matches();
+    return VendorSpecificJson.matches(type);
   }
 
   /**
